[gd_scene load_steps=4 format=3 uid="uid://bhna2gd7vrbgo"]

[ext_resource type="Script" path="res://SampleRollback/rollback_main_scene.gd" id="1_k6sf4"]
[ext_resource type="PackedScene" uid="uid://dj24f7c3j4psl" path="res://SampleDeltaRollbackExample/Player.tscn" id="2_a8riu"]

[sub_resource type="SGRectangleShape2D" id="SGRectangleShape2D_3awqd"]
extents_x = 19139790

[node name="rollback_main_scene" type="Node2D"]
script = ExtResource("1_k6sf4")

[node name="SGCharacterBody2D" parent="." instance=ExtResource("2_a8riu")]

[node name="SGStaticBody2D" type="SGStaticBody2D" parent="."]

[node name="SGCollisionShape2D" type="SGCollisionShape2D" parent="SGStaticBody2D"]
shape = SubResource("SGRectangleShape2D_3awqd")
position = Vector2(0, 86)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ServerPanel" type="Panel" parent="CanvasLayer"]
offset_left = 40.0
offset_top = 32.0
offset_right = 363.0
offset_bottom = 192.0

[node name="IpEdit" type="LineEdit" parent="CanvasLayer/ServerPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 13.0
offset_top = 17.0
offset_right = 286.0
offset_bottom = 48.0
placeholder_text = "192.168.1.100"

[node name="PortEdit" type="LineEdit" parent="CanvasLayer/ServerPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 13.0
offset_top = 62.0
offset_right = 286.0
offset_bottom = 93.0
placeholder_text = "9999"

[node name="ServerHostButton" type="Button" parent="CanvasLayer/ServerPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 29.0
offset_top = 118.0
offset_right = 129.0
offset_bottom = 149.0
text = "Host"

[node name="ServerJoinButton" type="Button" parent="CanvasLayer/ServerPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 160.0
offset_top = 120.0
offset_right = 269.0
offset_bottom = 151.0
text = "Join"
